# ResourceAllocation

./: .env.example  .gitignore  CRUL_TEST_EXAMPLES.md  Dockerfile  README.md  dependencies.py  docker-compose.yml  main.py  pyproject.toml  worker.py
alembic/: env.py
alembic/versions/: c1092ce3fa72_add_userteachercourserelation_table.py  c43dbdcaf7c8_add_credit_and_phone_number_to_users.py
apps/: time_table.py  users.py
apps/time_table_maker/: tasks.py  time_table.py
apps/time_table_maker/services/: tests.py  time_table_service.py
apps/users/: security.py  users.py
models/: __init__.py  time_table_models.py  users_models.py
schemas/: time_table_schema.py  users_schema.py
services/: time_table_service.py
