[project]
name = "resourceallocation"
version = "0.1.0"
description = ""
authors = [
    {name = "Meysam9472",email = "meysammehmannavaz94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "ortools (>=9.15.6755,<10.0.0)",
    "celery (>=5.6.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "runflare-mirror"
url = "https://mirror-pypi.runflare.com/simple"
priority = "primary"

