[project]
name = "resourceallocation"
version = "0.1.0"
description = ""
authors = [
    {name = "Meysam9472",email = "meysammehmannavaz94@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "ortools (>=9.15.6755,<10.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "kombu (>=5.6.2,<6.0.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "passlib[argon2] (>=1.7.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "slowapi (>=0.1.9,<0.2.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "runflare-mirror"
url = "https://mirror-pypi.runflare.com/simple"
priority = "primary"

